--- a/web/src/apps/workspace/i18n/zh.json
+++ b/web/src/apps/workspace/i18n/zh.json
@@ -42,6 +42,10 @@
         "getRootPath": "未请求到工作空间根目录，请刷新重试！",
         "scriptChanged": "脚本已发生改变，请保存后再试！"
       },
+      "topNotice": {
+        "title": "温馨提示",
+        "content": "沙箱环境属于开放体验环境，已部署WeDataSphere开源新版组件全部内容，但受安全限制仅开放指定DEMO的运行功能，且不能增改数据，敬请爱护使用。"
+      },
       "error": {
         "fileExists": "该文件已经存在！"
       },
