修改横幅信息

--- a/web/src/apps/workspace/i18n/en.json
+++ b/web/src/apps/workspace/i18n/en.json
@@ -44,7 +44,7 @@
       },
       "topNotice": {
         "title": "Tips",
-        "content": "Dear Sandbox users: The sand environment is an open environment for testing, deploying all the components of the WeDataSphere open source version. Currently, only demos are allowed to run due to security restrictions, and users cannot add or modify test data. Please take care of the use of the sandbox environment."
+        "content": "Dear Sandbox users: The sand environment is an open environment for testing, deploying all the components of the WeDataSphere open source version. Currently, only demos are allowed to run due to security restrictions, and users cannot add or modify test data. Please take care of the use of the sandbox environment.<br/>The Qualitis and Exchangis nodes  are temporarily unavailable due to the version update, and are expected to be restored by the end of July."
       },
       "error": {
         "fileExists": "Duplicated file!"
